IE11: Correctly align text in quantity selector

--- a/assets/js/base/components/quantity-selector/style.scss
+++ b/assets/js/base/components/quantity-selector/style.scss
@@ -21,12 +21,13 @@
 		min-width: 40px;
 		flex: 1 1 auto;
 		border: 0;
-		padding: 0.25em 0;
+		padding: 0.4em 0;
 		margin: 0;
 		text-align: center;
 		background: transparent;
 		box-shadow: none;
 		color: #000;
+		line-height: 1;
 		vertical-align: middle;
 		-moz-appearance: textfield;
 
